# python-flask-server

./: Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml  server.py
.github/: FUNDING.yml
.github/workflows/: ci.yml
src/: app.py
src/api/: uptime.py
tests/: test_hello.py
tests/features/: hello.feature
