[tool.poetry]
name = "python-flask-server"
version = "0.1.0"
description = "python flask server"
authors = ["Mitch Allen <https://mitchallen.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "api", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-bdd = "^7.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
